Fix grade model and add teacher info
